# kgls

./: .gitignore  Cargo.toml  README.md  build.rs
src/: app.rs  config_file.rs  core.rs  display.rs  flags.rs  git.rs  git_theme.rs  lib.rs  main.rs  theme.rs
src/flags/: blocks.rs  date.rs  dereference.rs  display.rs  header.rs  hyperlink.rs  icons.rs  ignore_globs.rs  indicators.rs  layout.rs  literal.rs  permission.rs  recursion.rs  size.rs  sorting.rs  symlink_arrow.rs  symlinks.rs  total_size.rs  truncate_owner.rs
src/meta/: access_control.rs  filetype.rs  mod.rs  name.rs  windows_utils.rs
src/stream/: mod.rs  tree_accumulator.rs
tests/: integration_orphaned_test.rs  test_flags.rs  test_lib.rs
tests/flags/: test_dereference.rs  test_display.rs  test_header.rs  test_hyperlink.rs  test_icons.rs  test_ignore_globs.rs  test_indicators.rs  test_layout.rs  test_literal.rs  test_permission.rs  test_recursion.rs  test_size.rs  test_sorting.rs  test_symlink_arrow.rs  test_symlinks.rs  test_total_size.rs  test_truncate_owner.rs
