[package]
authors = ["David Maple<david@cyrup.ai"]
build = "build.rs"
description = "A smart, adaptive ls replacement with modern features"
keywords = ["ls", "tree", "fs", "cli", "filesystem"]
license = "MIT OR Apache-2.0"
name = "kgls"
readme = "./README.md"
repository = "https://github.com/cyrup-ai/kgls"
version = "0.10.5"
edition = "2024"

[lib]
name = "kgls"
path = "src/lib.rs"

[[bin]]
name = "kgls"
path = "src/main.rs"

[build-dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"
version_check = "0.9.*"

[dependencies]
crossterm = { version = "0.29.0", features = ["serde"] }
dirs = "6.0.0"
libc = "0.2.*"
term_grid = "0.2.0"
terminal_size = "0.4.3"
thiserror = "2.0.17"
sys-locale = "0.3"
once_cell = "1.21.3"
chrono = { version = "0.4.42", features = ["unstable-locales"] }
chrono-humanize = "0.2"
console = "0.16"
unicode-width = "0.2.2"
lscolors = "0.21.0"
wild = "2.2.1"
globset = "0.4.*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
url = "2.5.7"
vsort = "0.2"
jwalk = "0.8.1"
rayon = "1.11.0"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }

# Logging (standardized across workspace)
log = "0.4"
env_logger = "0.11"

[target."cfg(not(all(windows, target_arch = \"x86\", target_env = \"gnu\")))".dependencies]
gix = { version = "0.75.0", default-features = false, features = ["status", "index", "dirwalk", "revision", "worktree-mutation", "blob-diff"] }

[target.'cfg(unix)'.dependencies]
users = { version = "0.11.0", package = "users" }
xattr = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_Memory"] }

[target."spirv-unknown-vulkan1.1".dependencies]
spirv-std = "0.9.0"

[dependencies.clap]
features = ["derive", "wrap_help"]
version = "4.5.53"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"
serial_test = "3.2.0"

[features]
default = []
sudo = []
